Removed crnk-core